# Copyright (c) 2017-2020, LWPU CORPORATION.  All rights reserved.
#
# Redistribution and use in source and binary forms, with or without modification, are permitted
# provided that the following conditions are met:
#     * Redistributions of source code must retain the above copyright notice, this list of
#       conditions and the following disclaimer.
#     * Redistributions in binary form must reproduce the above copyright notice, this list of
#       conditions and the following disclaimer in the documentation and/or other materials
#       provided with the distribution.
#     * Neither the name of the LWPU CORPORATION nor the names of its contributors may be used
#       to endorse or promote products derived from this software without specific prior written
#       permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR
# IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
# FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL LWPU CORPORATION BE LIABLE
# FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
# BUT NOT LIMITED TO, PROLWREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
# STRICT LIABILITY, OR TOR (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

#matlab_add_mex(NAME lwphy_mex OUTPUT_NAME lwphy_mex SRC lwphy_mex.c c_mexapi_version.c)
# CMake matlab_add_mex() command doesn't seem to work with R2018b. See:
# https://gitlab.kitware.com/cmake/cmake/issues/18391
# https://www.mathworks.com/matlabcentral/answers/377799-compiling-mex-files-without-the-mex-command
# (Attempting to use the generated MEX library from within MATLAB results in
# an error message about a missing gateway function. The command 'objdump -T
# lib.mexa64' in fact shows that the libraries generated by the MATLAB mex
# script have an export defined for mexFunction, whereas CMake generated
# libraries do not.) 
# Instead we will generate a library and manually specify the options shown
# in the Makefile link above from Mathworks.

# Matrix APIs:
# -DMX_COMPAT_32: compatibleArrayDims
# -DMATLAB_DEFAULT_RELEASE=R2017b: largeArrayDims
# -DMATLAB_DEFAULT_RELEASE=R2018a: Interleaved Complex
# MATLABMEX += -DMX_COMPAT_32

add_library(lwphy_mex SHARED lwphy_mex.cpp)
target_include_directories(lwphy_mex PUBLIC ${Matlab_ROOT_DIR}/extern/include)
target_link_libraries(lwphy_mex lwphy lwphy_hdf5)
set_target_properties(lwphy_mex PROPERTIES PREFIX "")
set_target_properties(lwphy_mex PROPERTIES SUFFIX .${Matlab_MEX_EXTENSION})
set_target_properties(lwphy_mex PROPERTIES COMPILE_DEFINITIONS "MATLAB_MEX_FILE;MX_COMPAT_32")

